public class Mueble {
    private int tamañoMueble;

    public Mueble(int tamañoMueble) {
        this.tamañoMueble = tamañoMueble;
    }

    public int getTamañoMueble() {
        return tamañoMueble;
    }

    public void setTamañoMueble(int tamañoMueble) {
        this.tamañoMueble = tamañoMueble;
    }
}
