@startuml

class Mundo {
}

class MundoFactory {
    + crearBateria(): Bateria
    + crearHabitacion(): Habitacion
    + crearGato(Habitacion): Gato
    + crearAspiradora(Bateria): Aspiradora
}

class Aspiradora {
}

class Gato {
}

class Habitacion {
}

class Zona {
}

class Mueble {
}

class ZonaDeRecarga {
}

class Bateria {
}

class VistaConsola {
}

Mundo *-- Habitacion : compone
Aspiradora *-l- Bateria : compone
Mundo *-- UnidadConMovimiento : compone
Habitacion *-d- Zona : compone
Zona o-- Mueble : puede contener
ZonaDeRecarga -|> Zona
Aspiradora ..> Zona : limpia
Gato ..> Zona : ensucia
VistaConsola ..> Aspiradora
VistaConsola ..> Bateria
VistaConsola ..> Habitacion
VistaConsola ..> Gato
Mundo *-- VistaConsola : usa
Aspiradora .u.|> UnidadConMovimiento
Gato .u.|> UnidadConMovimiento

' Nuevas relaciones para MundoFactory
Mundo ..> MundoFactory : usa
MundoFactory ..> Aspiradora : crea
MundoFactory ..> Bateria : crea
MundoFactory ..> Habitacion : crea
MundoFactory ..> Gato : crea
MundoFactory *-- VistaConsola : compone

@enduml